// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default state size m 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
/>
`;

exports[`default state size s 1`] = `
.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
/>
`;

exports[`expandable and closed size m 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  width: 18px;
  height: 18px;
  vertical-align: middle;
  text-align: center;
  line-height: 17px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: 3px;
  box-sizing: border-box;
  border: 1px solid #b8bec3;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .c4 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c3 .c5 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <span
          class="BaseIcon IconPlus c4 "
          data-lego="react"
        >
          <svg
            fill="currentColor"
            height="9px"
            viewBox="0 0 8 8"
            width="9px"
          >
            <path
              d="M4.696 3.335h3.333v1.333H4.696v3.334H3.363V4.668H.029V3.335h3.334V.002h1.333z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`expandable and closed size s 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  width: 14px;
  height: 14px;
  vertical-align: middle;
  text-align: center;
  line-height: 13px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: 3px;
  box-sizing: border-box;
  border: 1px solid #b8bec3;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .c4 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c3 .c5 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <span
          class="BaseIcon IconPlus c4 "
          data-lego="react"
        >
          <svg
            fill="currentColor"
            height="7px"
            viewBox="0 0 8 8"
            width="7px"
          >
            <path
              d="M4.696 3.335h3.333v1.333H4.696v3.334H3.363V4.668H.029V3.335h3.334V.002h1.333z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`expandable and hidden size m 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  width: 18px;
  height: 18px;
  vertical-align: middle;
  text-align: center;
  line-height: 17px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: 3px;
  box-sizing: border-box;
  border: 1px solid #b8bec3;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .c5 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c3 .c4 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  visibility: hidden;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <span
          class="BaseIcon IconMinus c4 "
          data-lego="react"
        >
          <svg
            fill="currentColor"
            height="9px"
            viewBox="0 0 8 8"
            width="9px"
          >
            <path
              d="M8.03 3.335v1.333h-8V3.335z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`expandable and hidden size s 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  width: 14px;
  height: 14px;
  vertical-align: middle;
  text-align: center;
  line-height: 13px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: 3px;
  box-sizing: border-box;
  border: 1px solid #b8bec3;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .c5 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c3 .c4 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  visibility: hidden;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <span
          class="BaseIcon IconMinus c4 "
          data-lego="react"
        >
          <svg
            fill="currentColor"
            height="7px"
            viewBox="0 0 8 8"
            width="7px"
          >
            <path
              d="M8.03 3.335v1.333h-8V3.335z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`expandable and loading size m 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  width: 18px;
  height: 18px;
  vertical-align: middle;
  text-align: center;
  line-height: 17px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="spin2 spin2_size_xxs spin2_view_default spin2_tone_default spin2_progress_yes"
        data-lego="react"
      />
    </div>
  </div>
</div>
`;

exports[`expandable and loading size s 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  width: 14px;
  height: 14px;
  vertical-align: middle;
  text-align: center;
  line-height: 13px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="spin2 spin2_size_xxs spin2_view_default spin2_tone_default spin2_progress_yes"
        data-lego="react"
      />
    </div>
  </div>
</div>
`;

exports[`expandable and opened size m 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  width: 18px;
  height: 18px;
  vertical-align: middle;
  text-align: center;
  line-height: 17px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: 3px;
  box-sizing: border-box;
  border: 1px solid #b8bec3;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .c5 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c3 .c4 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <span
          class="BaseIcon IconMinus c4 "
          data-lego="react"
        >
          <svg
            fill="currentColor"
            height="9px"
            viewBox="0 0 8 8"
            width="9px"
          >
            <path
              d="M8.03 3.335v1.333h-8V3.335z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`expandable and opened size s 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  width: 14px;
  height: 14px;
  vertical-align: middle;
  text-align: center;
  line-height: 13px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: 3px;
  box-sizing: border-box;
  border: 1px solid #b8bec3;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .c5 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c3 .c4 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <span
          class="BaseIcon IconMinus c4 "
          data-lego="react"
        >
          <svg
            fill="currentColor"
            height="7px"
            viewBox="0 0 8 8"
            width="7px"
          >
            <path
              d="M8.03 3.335v1.333h-8V3.335z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`expandable size m 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  width: 18px;
  height: 18px;
  vertical-align: middle;
  text-align: center;
  line-height: 17px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: 3px;
  box-sizing: border-box;
  border: 1px solid #b8bec3;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .c4 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c3 .c5 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <span
          class="BaseIcon IconPlus c4 "
          data-lego="react"
        >
          <svg
            fill="currentColor"
            height="9px"
            viewBox="0 0 8 8"
            width="9px"
          >
            <path
              d="M4.696 3.335h3.333v1.333H4.696v3.334H3.363V4.668H.029V3.335h3.334V.002h1.333z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`expandable size s 1`] = `
.c2 {
  position: relative;
  display: inline-block;
  width: 14px;
  height: 14px;
  vertical-align: middle;
  text-align: center;
  line-height: 13px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  border-radius: 3px;
  box-sizing: border-box;
  border: 1px solid #b8bec3;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 .c4 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c3 .c5 {
  color: #b8bec3;
  position: absolute;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  left: 50%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <span
          class="BaseIcon IconPlus c4 "
          data-lego="react"
        >
          <svg
            fill="currentColor"
            height="7px"
            viewBox="0 0 8 8"
            width="7px"
          >
            <path
              d="M4.696 3.335h3.333v1.333H4.696v3.334H3.363V4.668H.029V3.335h3.334V.002h1.333z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`selectable and selected size m 1`] = `
.c2 .checkbox__box:before {
  background-color: transparent !important;
  border-color: black !important;
}

.c2 .checkbox__box {
  background-color: black;
}

.c2 .checkbox__box {
  border-radius: 3px;
  background-clip: padding-box;
  vertical-align: top;
}

.c2 .checkbox__tick {
  bottom: 0 !important;
  left: 0 !important;
  width: 100% !important;
  height: 100% !important;
  background-size: 100%;
  background-image: url("tick.svg") !important;
}

.c2.checkbox_size_s .checkbox__label {
  line-height: 15px;
}

.c2.checkbox_size_m .checkbox__label {
  line-height: 17px;
}

.c1 {
  max-width: 100%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="control checkbox checkbox_view_classic checkbox_theme_normal checkbox_size_m checkbox_lines_multi checkbox_checked_yes c2"
      data-lego="react"
    >
      <span
        class="checkbox__box"
        data-lego="react"
      >
        <input
          aria-labelledby="labeluniq4"
          autocomplete="off"
          checked=""
          class="checkbox__control"
          data-lego="react"
          id="uniq4"
          type="checkbox"
          value=""
        />
        <i
          class="checkbox__tick"
          data-lego="react"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`selectable and selected size s 1`] = `
.c2 .checkbox__box:before {
  background-color: transparent !important;
  border-color: black !important;
}

.c2 .checkbox__box {
  background-color: black;
}

.c2 .checkbox__box {
  border-radius: 3px;
  background-clip: padding-box;
  vertical-align: top;
}

.c2 .checkbox__tick {
  bottom: 0 !important;
  left: 0 !important;
  width: 100% !important;
  height: 100% !important;
  background-size: 100%;
  background-image: url("tick.svg") !important;
}

.c2.checkbox_size_s .checkbox__label {
  line-height: 15px;
}

.c2.checkbox_size_m .checkbox__label {
  line-height: 17px;
}

.c1 {
  max-width: 100%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="control checkbox checkbox_view_classic checkbox_theme_normal checkbox_size_s checkbox_lines_multi checkbox_checked_yes c2"
      data-lego="react"
    >
      <span
        class="checkbox__box"
        data-lego="react"
      >
        <input
          aria-labelledby="labeluniq2"
          autocomplete="off"
          checked=""
          class="checkbox__control"
          data-lego="react"
          id="uniq2"
          type="checkbox"
          value=""
        />
        <i
          class="checkbox__tick"
          data-lego="react"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`selectable size m 1`] = `
.c2 .checkbox__box {
  border-radius: 3px;
  background-clip: padding-box;
  vertical-align: top;
}

.c2 .checkbox__tick {
  bottom: 0 !important;
  left: 0 !important;
  width: 100% !important;
  height: 100% !important;
  background-size: 100%;
  background-image: url("tick.svg") !important;
}

.c2.checkbox_size_s .checkbox__label {
  line-height: 15px;
}

.c2.checkbox_size_m .checkbox__label {
  line-height: 17px;
}

.c1 {
  max-width: 100%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="control checkbox checkbox_view_classic checkbox_theme_normal checkbox_size_m checkbox_lines_multi c2"
      data-lego="react"
    >
      <span
        class="checkbox__box"
        data-lego="react"
      >
        <input
          aria-labelledby="labeluniq3"
          autocomplete="off"
          class="checkbox__control"
          data-lego="react"
          id="uniq3"
          type="checkbox"
          value=""
        />
        <i
          class="checkbox__tick"
          data-lego="react"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`selectable size s 1`] = `
.c2 .checkbox__box {
  border-radius: 3px;
  background-clip: padding-box;
  vertical-align: top;
}

.c2 .checkbox__tick {
  bottom: 0 !important;
  left: 0 !important;
  width: 100% !important;
  height: 100% !important;
  background-size: 100%;
  background-image: url("tick.svg") !important;
}

.c2.checkbox_size_s .checkbox__label {
  line-height: 15px;
}

.c2.checkbox_size_m .checkbox__label {
  line-height: 17px;
}

.c1 {
  max-width: 100%;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 16px;
}

.c0 > *:not(:first-child) {
  margin-left: 10px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="control checkbox checkbox_view_classic checkbox_theme_normal checkbox_size_s checkbox_lines_multi c2"
      data-lego="react"
    >
      <span
        class="checkbox__box"
        data-lego="react"
      >
        <input
          aria-labelledby="labeluniq1"
          autocomplete="off"
          class="checkbox__control"
          data-lego="react"
          id="uniq1"
          type="checkbox"
          value=""
        />
        <i
          class="checkbox__tick"
          data-lego="react"
        />
      </span>
    </span>
  </div>
</div>
`;
